# ai-config-sync

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.json  global_rules.json  index.html  index.js  package-lock.json  package.json  pyproject.toml  resources.json  skill_sources.json  start.bat  start.sh  start.vbs  tsconfig.json  vite.config.ts
.superpowers/workflows/: skill-manager-implementation.json
agents/: sp-code-reviewer.md
bak/commit/: all.md  current.md
commands/: brainstorming.md  commit.md  wcs-image-generate.md
commands/commit/: commit-quicker.md  quicker.md  staged.md
commands/commit-v2/: commit-all.md  commit-current.md  commit-quicker.md  commit-staged.md
commands/sp/: sp-brainstorm.md  sp-clean.md  sp-continue.md  sp-status.md  sp-update-task.md
docs/plans/: 2026-02-04-skill-manager-design.md  2026-02-04-skill-manager-implementation.md  (+1 more)
electron/: main.js  preload.js
hooks/: Claude通知钩子.json  codex-notify.ps1
lib/: config.js  file-sync.js  git.js  linker.js  scanner.js  updater.js
python_app/: __init__.py  __main__.py  bootstrap.py  controller.py
tests/: __init__.py  test_app_service.py  test_config_service.py  test_dashboard.py  test_file_sync.py  test_global_rule_runtime_service.py  test_global_rule_state_service.py  test_global_rule_sync_service.py  test_gui_smoke.py  test_logo_matrix.py  test_omx_workflow_handler.py  test_resource_operations.py  test_runtime_service.py  test_scanner.py  test_skill_upstreams.py  test_update_tools.py  test_workflow_handlers.py  test_workflow_service.py
workflow/: 补充规则.md
(+145 files in other folders)
